增加音视频合成与分离
使用FFmpeg实现音视频合成、抽取音频、抽取视频

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,12 +21,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".activity.AudioHandleActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".activity.AudioHandleActivity"/>
+
+        <activity android:name=".activity.MediaHandleActivity"/>
+
+        <activity android:name=".activity.VideoHandleActivity"/>
 
     </application>
 
