视频解码播放
使用FFmpeg进行视频解码播放

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -23,7 +23,8 @@ add_library( # Sets the name of the library.
              src/main/cpp/ffmpeg_filter.c
              src/main/cpp/ffmpeg_opt.c
              src/main/cpp/audio_player.c
-             src/main/cpp/openSL_audio_player.c)
+             src/main/cpp/openSL_audio_player.c
+             src/main/cpp/video_player.c)
 
 add_library( ffmpeg
              SHARED
