--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -26,7 +26,9 @@ add_library( # Sets the name of the library.
              src/main/cpp/audio_player.c
              src/main/cpp/openSL_audio_player.c
              src/main/cpp/video_player.c
-             src/main/cpp/ffmpeg_pusher.cpp)
+             src/main/cpp/ffmpeg_pusher.cpp
+             src/main/cpp/AVpacket_queue.c
+             src/main/cpp/media_player.c)
 
 add_library( ffmpeg
              SHARED
