--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,19 +27,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--音频处理-->
+        <!-- 音频处理 -->
         <activity android:name=".activity.AudioHandleActivity" />
-        <!--音视频处理-->
+        <!-- 音视频处理 -->
         <activity android:name=".activity.MediaHandleActivity" />
-        <!--视频处理-->
+        <!-- 视频处理 -->
         <activity android:name=".activity.VideoHandleActivity" />
-        <!--视频解码播放-->
+        <!-- 视频解码播放 -->
         <activity
             android:name=".activity.VideoPlayerActivity"
+            android:screenOrientation="landscape" />
+        <!-- 推流直播 -->
+        <activity android:name=".activity.PushActivity" />
+        <!--音视频解码播放-->
+        <activity android:name=".activity.MediaPlayerActivity"
             android:screenOrientation="landscape"/>
-        <!--推流直播-->
-        <activity android:name=".activity.PushActivity"/>
-
     </application>
 
 </manifest>
