添加视频滤镜特效
滤镜特效：素描、色彩平衡、模糊、hue、lut、翻转、旋转、九宫格、边缘检测等

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -28,7 +28,8 @@ add_library( # Sets the name of the library.
              src/main/cpp/video_player.c
              src/main/cpp/ffmpeg_pusher.cpp
              src/main/cpp/AVpacket_queue.c
-             src/main/cpp/media_player.c)
+             src/main/cpp/media_player.c
+             src/main/cpp/video_filter.c)
 
 add_library( ffmpeg
              SHARED
