--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,14 +37,20 @@
         <activity
             android:name=".activity.VideoPlayerActivity"
             android:screenOrientation="landscape" />
-        <!--音视频解码播放-->
-        <activity android:name=".activity.MediaPlayerActivity"
-            android:screenOrientation="landscape"/>
+        <!-- 音视频解码播放 -->
+        <activity
+            android:name=".activity.MediaPlayerActivity"
+            android:screenOrientation="landscape" />
         <!-- 本地推流直播 -->
         <activity android:name=".activity.PushActivity" />
         <!-- 实时推流直播 -->
-        <activity android:name=".activity.LiveActivity"
-            android:screenOrientation="landscape"/>
+        <activity
+            android:name=".activity.LiveActivity"
+            android:screenOrientation="landscape" />
+        <!--滤镜特效-->
+        <activity
+            android:name=".activity.FilterActivity"
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
