--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 *.iml
 .gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
+.idea
 .DS_Store
 /build
 /captures
+/local.properties
 .externalNativeBuild
