四分屏：同时播放四路画面
四分屏：同时播放四路画面

--- a/OnLive/src/main/AndroidManifest.xml
+++ b/OnLive/src/main/AndroidManifest.xml
@@ -19,6 +19,18 @@
             android:label="@string/app_name"
             android:screenOrientation="landscape"
             android:theme="@style/FullscreenTheme">
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        </activity>
+
+        <activity
+            android:name="com.frank.living.activity.MultiScreenActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="landscape"
+            android:theme="@style/FullscreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
