--- a/OnLive/src/main/AndroidManifest.xml
+++ b/OnLive/src/main/AndroidManifest.xml
@@ -29,11 +29,12 @@
         <activity
             android:name="com.frank.living.activity.MultiScreenActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
             android:screenOrientation="landscape"
             android:theme="@style/FullscreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
