--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,8 +44,7 @@
             android:screenOrientation="landscape" />
         <!-- 本地推流直播 -->
         <activity
-            android:name=".activity.PushActivity"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
+            android:name=".activity.PushActivity" />
         <!-- 实时推流直播 -->
         <activity
             android:name=".activity.LiveActivity"
@@ -57,8 +56,7 @@
             android:screenOrientation="landscape" />
         <!--视频倒播-->
         <activity android:name=".activity.VideoReverseActivity"
-            android:screenOrientation="landscape"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
+            android:screenOrientation="landscape" />
         <!--申请悬浮窗权限-->
         <activity android:name=".floating.FloatActivity"
             android:screenOrientation="portrait"
