--- a/OnLive/build.gradle
+++ b/OnLive/build.gradle
@@ -1,22 +1,22 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '26.0.2'
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     lintOptions {
         abortOnError false
     }
     defaultConfig {
         applicationId "com.frank.living"
-        minSdkVersion 17
-        targetSdkVersion 25
-        versionCode 1001
-        versionName "1.0.1"
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        versionCode rootProject.ext.versionCode
+        versionName rootProject.ext.versionName
         flavorDimensions "800400"
 
         ndk {
-            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
+            abiFilters  'armeabi-v7a', 'arm64-v8a'
         }
     }
     buildTypes {
@@ -26,8 +26,8 @@ android {
         }
     }
     productFlavors {
-        all32 { minSdkVersion 17 }
-        all64 { minSdkVersion 17 }
+        all32 { minSdkVersion rootProject.ext.minSdkVersion }
+        all64 { minSdkVersion rootProject.ext.minSdkVersion }
     }
 
     sourceSets {
