--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,12 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx512m
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+org.gradle.jvmargs=-Xmx512m
+android.enableJetifier=true
+android.useAndroidX=true
