--- a/Live/build.gradle
+++ b/Live/build.gradle
@@ -33,5 +33,5 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation "androidx.appcompat:appcompat:$rootProject.appcompatVersion"
 }
