--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,10 @@
 org.gradle.jvmargs=-Xmx512m
 android.enableJetifier=true
 android.useAndroidX=true
+
+appcompatVersion=1.1.0
+recyclerviewVersion=1.1.0-rc01
+preferenceVersion=1.1.0
+annotationVersion=1.1.0
+ottoVersion=1.3.8
+ijkVersion=0.8.8
