--- a/Live/build.gradle
+++ b/Live/build.gradle
@@ -15,7 +15,7 @@ android {
             }
         }
         ndk{
-            abiFilters "armeabi-v7a"
+            abiFilters "armeabi-v7a", "arm64-v8a"
         }
     }
     buildTypes {
