--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
         <!-- 实时推流直播 -->
         <activity
             android:name=".activity.LiveActivity"
-            android:screenOrientation="landscape" />
+            android:screenOrientation="portrait" />
         <!-- 滤镜特效 -->
         <activity
             android:name=".activity.FilterActivity"
