change packet_queue.c to cpp

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -29,7 +29,7 @@ add_library( # Sets the name of the library.
             src/main/cpp/openSL_audio_player.c
             src/main/cpp/video_player.c
             src/main/cpp/ffmpeg_pusher.cpp
-            src/main/cpp/AVpacket_queue.c
+            src/main/cpp/packet_queue.cpp
             src/main/cpp/media_player.c
             src/main/cpp/video_filter.c
             src/main/cpp/fast_start.c
