change openSL_audio_player.c to cpp

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -26,7 +26,7 @@ add_library( # Sets the name of the library.
             src/main/cpp/ffmpeg/ffprobe.c
             src/main/cpp/ffmpeg/ffmpeg_hw.c
             src/main/cpp/audio_player.cpp
-            src/main/cpp/openSL_audio_player.c
+            src/main/cpp/openSL_audio_player.cpp
             src/main/cpp/video_player.cpp
             src/main/cpp/ffmpeg_pusher.cpp
             src/main/cpp/packet_queue.cpp
