--- a/gradle.properties
+++ b/gradle.properties
@@ -19,11 +19,11 @@ org.gradle.jvmargs=-Xmx512m
 android.enableJetifier=true
 android.useAndroidX=true
 
-appcompatVersion=1.2.0
-recyclerviewVersion=1.1.0-rc01
+appcompatVersion=1.3.0
+recyclerviewVersion=1.2.1
 preferenceVersion=1.1.0
 annotationVersion=1.1.0
 ottoVersion=1.3.8
 ijkVersion=0.8.8
-core_ktx=1.3.2
-lifecycle_ktx=2.2.0
+core_ktx=1.5.0
+lifecycle_ktx=2.3.1
